--- a/C#/shanuMVCUserRoles/Web.config
+++ b/C#/shanuMVCUserRoles/Web.config
@@ -10,7 +10,7 @@
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=HIEUND17\SQLEXPRESS;Initial Catalog=HAPINUTSHOP;Integrated Security=True;User Id=sa; password=Hamham291096" providerName="System.Data.SqlClient" />
-  <add name="HAPINUTSHOPEntities" connectionString="metadata=res://*/DTO.HAPINUTModel.csdl|res://*/DTO.HAPINUTModel.ssdl|res://*/DTO.HAPINUTModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=HIEUND17\SQLEXPRESS;initial catalog=HAPINUTSHOP;integrated security=True;user id=sa;password=Hamham291096;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+<add name="HAPINUTSHOPEntities" connectionString="metadata=res://*/DTO.DataModel.csdl|res://*/DTO.DataModel.ssdl|res://*/DTO.DataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=HIEUND17\SQLEXPRESS;initial catalog=HAPINUTSHOP;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
