Add router and code category

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 C#/.vs/shanuMVCUserRoles/v15/Server/sqlite3/db.lock
 C#/packages
 C#/shanuMVCUserRoles/bin
+C#/.vs/shanuMVCUserRoles/v15/Server/sqlite3/storage.ide-wal
+C#/.vs/shanuMVCUserRoles/v15/Server/sqlite3/storage.ide-shm
