--- a/C#/shanuMVCUserRoles/packages.config
+++ b/C#/shanuMVCUserRoles/packages.config
@@ -32,6 +32,8 @@
   <package id="Modernizr" version="2.6.2" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="10.0.1" targetFramework="net46" />
   <package id="Owin" version="1.0" targetFramework="net46" />
+  <package id="PagedList" version="1.17.0.0" targetFramework="net46" />
+  <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net46" />
   <package id="Respond" version="1.2.0" targetFramework="net46" />
   <package id="Sendgrid" version="9.10.0" targetFramework="net46" />
   <package id="System.IdentityModel.Tokens.Jwt" version="5.1.2" targetFramework="net46" />
