--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ C#/shanuMVCUserRoles/bin
 C#/.vs/shanuMVCUserRoles/v15/Server/sqlite3/storage.ide-wal
 C#/.vs/shanuMVCUserRoles/v15/Server/sqlite3/storage.ide-shm
 C#/.vs
+C#/shanuMVCUserRoles/obj/
