--- a/C#/shanuMVCUserRoles/shanuMVCUserRoles.csproj
+++ b/C#/shanuMVCUserRoles/shanuMVCUserRoles.csproj
@@ -221,6 +221,7 @@
     <Compile Include="Controllers\CartController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\NavigationController.cs" />
     <Compile Include="Controllers\PageController.cs" />
     <Compile Include="Controllers\RoleController.cs" />
     <Compile Include="Controllers\ShopController.cs" />
@@ -1227,12 +1228,14 @@
     <Content Include="Views\Shop\Index.cshtml" />
     <Content Include="Views\Shop\ProductDetails.cshtml" />
     <Content Include="Views\Cart\Index.cshtml" />
+    <Content Include="Views\Shared\_CategoriesPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Areas\Admin\Models\" />
     <Folder Include="Areas\Admin\Views\User\" />
     <Folder Include="Images\Products\3\Gallery\" />
+    <Folder Include="Views\Navigation\" />
     <Folder Include="Views\Page\" />
   </ItemGroup>
   <ItemGroup>
