Thay đỏi login và thêm Quản lý user

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@ C#/.vs/shanuMVCUserRoles/v15/Server/sqlite3/storage.ide-wal
 C#/.vs/shanuMVCUserRoles/v15/Server/sqlite3/storage.ide-shm
 C#/.vs
 C#/shanuMVCUserRoles/obj/
+C#/shanuMVCUserRoles/Images/Products/3/IMG_5296.JPG
+C#/shanuMVCUserRoles/Images/Products/3/Gallery/IMG_5296.JPG
+C#/shanuMVCUserRoles/Images/Products/2/triumph.jpg
+C#/shanuMVCUserRoles/Images/Products/2/Gallery/triumph.jpg
