--- a/C#/shanuMVCUserRoles/Web.config
+++ b/C#/shanuMVCUserRoles/Web.config
@@ -5,15 +5,11 @@
   -->
 <configuration>
   <configSections>
-    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
-    <!--<add name="DefaultConnection" connectionString="Data Source=DESKTOP-FQMKKNC\VOCAO;Initial Catalog=HAPINUTSHOP;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="HAPINUTSHOPEntities" connectionString="metadata=res://*/DTO.DataModel.csdl|res://*/DTO.DataModel.ssdl|res://*/DTO.DataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=DESKTOP-FQMKKNC\VOCAO;Initial Catalog=HAPINUTSHOP;Integrated Security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-    <add name="DefaultConnection" connectionString="Data Source=HIEUND17\SQLEXPRESS;Initial Catalog=HAPINUTSHOP;Integrated Security=True; user Id=sa; password=Hamham291096" providerName="System.Data.SqlClient" />
-    <add name="HAPINUTSHOPEntities" connectionString="metadata=res://*/DTO.DataModel.csdl|res://*/DTO.DataModel.ssdl|res://*/DTO.DataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=HIEUND17\SQLEXPRESS;Initial Catalog=HAPINUTSHOP;Integrated Security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-
+  	<add name="DefaultConnection" connectionString="Data Source=daulacxuquang.com;Initial Catalog=daulacxu_hapinutshop;User ID=daulacxu_sa;Password=Ham@1q2w3e4r;Integrated Security=False;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+  	<add name="HAPINUTSHOPEntities" connectionString="metadata=res://*/DTO.DataModel.csdl|res://*/DTO.DataModel.ssdl|res://*/DTO.DataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=daulacxuquang.com;Initial Catalog=daulacxu_hapinutshop;User ID=daulacxu_sa;Password=Ham@1q2w3e4r;Integrated Security=False;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -25,6 +21,7 @@
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.6" />
     <httpRuntime targetFramework="4.6" />
+	<customErrors mode="Off"/>
   </system.web>
   <system.webServer>
     <modules>
@@ -80,9 +77,9 @@
     </assemblyBinding>
   </runtime>
   <entityFramework>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework">
       <parameters>
-        <parameter value="mssqllocaldb" />
+		 <parameter value="Data Source=daulacxuquang.com;Integrated Security=False;MultipleActiveResultSets=True" />
       </parameters>
     </defaultConnectionFactory>
     <providers>
